# tmux-palette-rs

./: Cargo.toml  LICENSE  README.md  install.sh  tmux-palette.tmux
.github/workflows/: build.yml
examples/: README.md  docker-containers.json  find-files.json  github-prs.json  npm-scripts.json
examples/demo/: demo-docker.json  demo-github-actions.json  demo-github-prs.json  demo-projects.json  demo.json
src/: cli.rs  dispatch.rs  fuzzy.rs  lib.rs  main.rs  palette.rs  raw.rs  render.rs  text.rs  theme.rs  themes_bundled.rs  tmux.rs  types.rs  user_config.rs
src/palettes/: command_prompt.rs  commands.rs  find_pane.rs  mod.rs  move_pane.rs  themes.rs
